--- a/views/weather.hbs
+++ b/views/weather.hbs
@@ -28,20 +28,17 @@
 {{/extend}}
 
 <main>
-  <header>
-    <h1>Weather</h1>
-  </header>
   <section >
     <h3>Yesterday</h3>
     <div id="yesterday" class="graph ct-perfect-fourth"></div>
     <div class="weather_indicator_container" id="yesterday_indicator"></div>
 
-    <h3>Today</h3>
+    <h3 style="margin-top: 16px;">Today</h3>
     <div id="today" class="graph ct-perfect-fourth"></div>
     <div class="weather_indicator_container" id="today_indicator">
     </div>
     
-    <h3>Tomorrow</h3>
+    <h3 style="margin-top: 16px;">Tomorrow</h3>
     <div id="tomorrow" class="graph ct-perfect-fourth"></div>
     <div class="weather_indicator_container" id="tomorrow_indicator"></div>
   </section>
