--- a/views/weather.hbs
+++ b/views/weather.hbs
@@ -24,6 +24,12 @@
     .rain {
       background-color: rgb(80, 80, 200);
     }
+
+    @media only screen and (max-width: 600px) {
+      .graph {
+        height: 200px;
+      }
+    }
   </style>
 {{/extend}}
 
